client/responsive.import.less
// @media (max-width: 599px) {
//   #logo-header-lrg h1 {
//     font-size: 36px;
//     padding-left: 0px;
//   }
// }

@media (max-width: 767px) {
  .drink-menu .name {
    font-size: 24px;
  }
  .col-xs-5 {
    padding-left: 0px;
  }
  .col-xs-7 {
    padding-right: 0px;
  }
}

@media (min-width: 600px) and (max-width: 767px) {
  #logo-header-lrg h1 {
    font-size: 52px;
    padding-left: 0px;
  }
}

@media (min-width: 768px) and (max-width: 979px) {
  #logo-header-lrg {
    h1 {
      font-size: 80px
    }
    #logo {
      max-height: 100px;
    }
  }
}

